--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,24 @@
+
 h1 {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
+#recipe{
+    margin: auto;
+}
+#fav_food{
+    margin: auto;
+}
 #Ingredient_list{
+    margin: auto;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 #Hyperlinks {
+    margin: auto;
     font-family: Arial;
     text-align: center;
     border: 3px dashed red;
+    width: 500px;
     padding: 5px;
     background-color:blanchedalmond;
 }
