--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,50 @@
-h1 {
+body {
     font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    background-color:darkolivegreen;
+    color:white;
+    text-align:center;
+    padding: 20px 0;
+}
+nav {
+    background-color:darkgreen;
+}
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display:flex;
+    justify-content: center;
+}
+nav ul li{
+    margin: 0 15px;
+}
+nav ul a {
+    color:white;
+    text-decoration: none;
+    padding:10px 20px;
+    display: block;
+}
+nav ul li a:hover {
+    background-color:darkslategrey;
+}
+main {
+    padding:0;
 }
 #recipe{
     text-align: left;
-    text-indent: 75px;
 }
 #fav_food{
     text-align: left;
-    text-indent: 120px;
-}
-.indentended-list {
-    padding-left: 120px;
+    
 }
 #Ingredient_list{
     text-align:left; 
-    text-indent: 75px;  
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 #Hyperlinks {
@@ -29,4 +58,13 @@ h1 {
 }
 #Hyperlinks a:hover {
     color:crimson;
+}
+footer {
+    background-color:darkolivegreen;
+    text-align: center;
+    color:white;
+    padding: 10px 0;
+    position:fixed;
+    bottom:0;
+    width:100%;
 }
