--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin:0;
     padding: 0;
+    padding-bottom: 100px;
     box-sizing: border-box;
     background-color:white;
-    ;
 }
 
 /*All page headers*/
@@ -16,7 +16,7 @@ header {
     display:flex;
     justify-content: center;
     align-items: center;
-    width:100vw;
+    width:100%;
     height: 100px;
     padding: 20px 0;
 }
@@ -57,11 +57,15 @@ nav ul li a:hover {
     display:flex;
     justify-content: center;
     align-items:center;    
-    width:100%;
+    width:100%; 
+    margin-bottom: 50px;
 }
-.image-container img {
-    max-width: 50%;
-    height :auto;
+.lasagnaimg {
+    width: 400px;
+    height: 500px;
+    border-radius: 100%;
+    border: solid 3px;
+    object-fit: cover;
 }
 
 /*recipe/step by step page style*/
@@ -110,6 +114,19 @@ nav ul li a:hover {
 }
 
 /*style for the ingredients page*/
+@keyframes wiggle {
+    0%, 100% { transform: rotate(0deg); }
+    10% { transform: rotate(-5deg); }
+    20% { transform: rotate(5deg); }
+    30% { transform: rotate(-5deg); }
+    40% { transform: rotate(5deg); }
+    50% { transform: rotate(-5deg); }
+    60% { transform: rotate(5deg); }
+    70% { transform: rotate(-5deg); }
+    80% { transform: rotate(5deg); }
+    90% { transform: rotate(-5deg); }
+}
+
 #ingrlist{
     margin-top:20px;
     margin-left: 80px;
@@ -118,9 +135,16 @@ nav ul li a:hover {
     width: calc(70%-30px);
     background-color: #f0f0f0;
     padding:10px;
+    
+}
+.column_list :hover {
+    animation: wiggle .8s ease-in-out 1;
 }
 #ingrlist h2{
     text-align:center;
+}
+#ingrlist h2 :hover {
+    animation: wiggle .5s 1;
 }
 .container{
     column-count: 2; 
