--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,7 @@ nav ul li a:hover {
 }
 .nutrition tbody tr:hover {
     background-color: rgb(104, 107, 107);
+    color:white;
 }
 .titlerow th{
     border:none;
